welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:20: error: ';' expected but 'else' found.
		else{
                ^noTriples:27: error: Unmatched closing brace '}' ignored here
 }
 ^